<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">wheely</string>
	<string name="app_name">wheely</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Getting Help</string>
    <string name="new_search">Search Near Places</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_places_map">PlacesMapActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Καλώς ήρθατε στο WheelyMap! Επιλέξτε την επόμενή σας ενέργεια από το παραπάνω μενού. Υποστηρίξτε την κίνηση για όλους!</string>
    <string name="places_map">Show Places on Map</string>
    <string name="places_nearby">Show Places Nearby</string>
    <string name="title_activity_places_list">PlacesListActivity</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="self_destruct">Self Destruct</string>
    <string name="redflag">redflag</string>
    <string name="greenflag">greenflag</string>
    <string name="orangeflag">orangeflag</string>
    <string name="place_photo">Place Photo</string>
    <string name="hnt_pavement">Γράψτε το σχόλιό σας εδώ.</string>
    <string name="pavements">Pavements</string>
    <string name="radius_dialog_title">Distance in Meters</string>
    <string name="radius_title">Radius</string>
    <string name="radius_summary">Defines the distance (in meters) within which to return Place results</string>
    <string name="listview_no_results">No Results</string>
    <string name="pavement_show_in_map">Show in map</string> 
    <string name="place_type">Place Types</string>   
    <string name="place_type_summary">Select types of Places to be searched</string>
    <string name="place_type_all">All</string>
    <string name="place_type_cafe">Cafe</string>
    <string name="place_type_restaurant">Restaurant</string>
    <string name="place_type_store">Store</string>
    <string name="place_type_school">School</string>
    <string name="place_type_hospital">Hospital</string>
    
</resources>
