<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <!-- 
	<item android:id="@+id/new_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/new_search"
          android:showAsAction="always"/>
	 -->
	 
	<item android:id="@+id/places_nearby"
          android:icon="@drawable/location_place"
          android:title="@string/places_nearby"
          android:showAsAction="always"
          android:onClick="onOptionsItemSelected"/>
	
	<item android:id="@+id/places_map"
          android:icon="@drawable/location_map"
          android:title="@string/places_map"
          android:showAsAction="always"
          android:onClick="onOptionsItemSelected" />
	
	<item android:id="@+id/pavements" 
	      android:icon="@drawable/ic_action_p"         
          android:title="@string/pavements"
          android:showAsAction="always" />

</menu>
