<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">    
	    
	    <ImageView
            android:id="@+id/img_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"      
            android:layout_gravity="center_horizontal"      
            android:src="@drawable/blank_accessibility_icon"
            android:contentDescription="@string/place_photo" />
	    

    	<TextView
    		android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:layout_gravity="center" 
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" 
            android:textStyle="bold"/>
    	
    	<TextView
    	    android:id="@+id/textViewName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    	
    	<TextView
    	    android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"/>
    	
    	<TextView
    	    android:id="@+id/textViewAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    	    
    	<TextView
    	    android:id="@+id/textViewPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right|center_vertical" />
    	
    	<TextView
    	    android:id="@+id/textViewLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" 
            android:layout_marginBottom="5dp" />
    
    	<TextView 
	        android:id="@+id/textViewRating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp" 
            android:layout_marginBottom="5dp" />
    	
    	    	
    	<LinearLayout 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_gravity="center_horizontal" >
    
		   	<ImageButton
		        android:id="@+id/btn_red"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/circle_red_dark" 
		        android:contentDescription="@string/redflag" />
	
	        <ImageButton
	            android:id="@+id/btn_green"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="2dp"
	            android:layout_marginRight="10dp"
	            android:background="@drawable/circle_green_dark"
	            android:contentDescription="@string/greenflag" />
	    
	    	<ImageButton
	            android:id="@+id/btn_orange"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="2dp"
	            android:layout_marginRight="10dp"
	            android:background="@drawable/circle_yellow_dark"
	            android:contentDescription="@string/orangeflag" />    	
    	
    	</LinearLayout>
    	
	</LinearLayout>

</ScrollView>